<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayoutContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/galaxy_bg"
    android:visibility="visible"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/sw_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/star_wars_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineContentStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFirstDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSecondDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineThirdDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineContentEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalHalf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/whiteDice"
        android:contentDescription="@string/white_die_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineFirstDice"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalHalf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineContentStart"
        app:srcCompat="@drawable/white_complete" />
    <ImageView
        android:id="@+id/redDice"
        android:contentDescription="@string/red_die_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineFirstDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineVerticalHalf"
        app:layout_constraintTop_toTopOf="@+id/guidelineContentStart"
        app:srcCompat="@drawable/red_complete" />

    <ImageView
        android:id="@+id/yellowDice"
        android:contentDescription="@string/yellow_die_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineSecondDice"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalHalf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineFirstDice"
        app:srcCompat="@drawable/yellow_complete" />

    <ImageView
        android:id="@+id/greenDice"
        android:contentDescription="@string/green_die_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineSecondDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineVerticalHalf"
        app:layout_constraintTop_toBottomOf="@+id/guidelineFirstDice"
        app:srcCompat="@drawable/green_complete" />

    <ImageView
        android:id="@+id/purpleDice"
        android:contentDescription="@string/purple_die_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineThirdDice"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalHalf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineSecondDice"
        app:srcCompat="@drawable/purple_complete" />

    <ImageView
        android:id="@+id/blueDice"
        android:contentDescription="@string/blue_die_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineThirdDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineVerticalHalf"
        app:layout_constraintTop_toBottomOf="@+id/guidelineSecondDice"
        app:srcCompat="@drawable/blue_complete" />

    <ImageView
        android:id="@+id/blackDice"
        android:contentDescription="@string/black_die_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineContentEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineThirdDice"
        app:srcCompat="@drawable/black_complete" />

</androidx.constraintlayout.widget.ConstraintLayout>